--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
    <header >
     <!-- nav bar section -->
-    <section class=" md:max-w-[1250px] sm:max-w-[640px] mx-auto shadow-[0_1px_50px_rgba(181,181,181,0.25)] bg-white flex flex-col sm:flex-row justify-between items-center py-[24px] px-[60px] sm:py-6 sm:px-8 md:px-[60px] gap-4 sm:gap-0 sm:m-2">
+    <section class=" md:max-w-[1250px] sm:max-w-[640px] mx-auto shadow-[0_1px_50px_rgba(181,181,181,0.25)] bg-white flex flex-col sm:flex-row justify-between items-center py-[24px] px-[60px] sm:py-6 sm:px-8 md:px-[60px] gap-4 sm:gap-0">
          <!-- nav bar left -->
         <div class="nav-left flex justify-center items-center gap-2">
                 <!-- logo and EmergencyService -->
