--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                                   <!-- 999 and sorbojonin  -->
                                 <div class="mt-2 sm:mt-3">
-                                   <div class="text-xl sm:text-2xl md:text-3xl font-extrabold">999</div>
+                                   <div class="text-xl sm:text-2xl md:text-3xl font-bold">999</div>
                                    <span class="inline-block mt-2 bg-gray-200 text-gray-700 text-[10px] sm:text-xs md:text-sm px-2 sm:px-3 py-1 rounded-full">সর্বজনীন</span>
                                 </div>
                                   <!-- 2 buttons -->
@@ -128,7 +128,7 @@
 
                                   <!-- 999 and sorbo jonin  -->
                                 <div class="mt-2 sm:mt-3">
-                                   <div class="text-xl sm:text-2xl md:text-3xl font-extrabold">999</div>
+                                   <div class="text-xl sm:text-2xl md:text-3xl font-bold">999</div>
                                    <span class="inline-block mt-2 bg-gray-200 text-gray-700 text-[10px] sm:text-xs md:text-sm px-2 sm:px-3 py-1 rounded-full">পুলিশ</span>
                                 </div>
                                   <!-- 2 buttons -->
@@ -153,7 +153,7 @@
 
                                   <!-- 999 and sorbo jonin  -->
                                 <div class="mt-2 sm:mt-3">
-                                   <div class="text-xl sm:text-2xl md:text-3xl font-extrabold">999</div>
+                                   <div class="text-xl sm:text-2xl md:text-3xl font-bold">999</div>
                                    <span class="inline-block mt-2 bg-gray-200 text-gray-700 text-[10px] sm:text-xs md:text-sm px-2 sm:px-3 py-1 rounded-full">ফায়ার</span>
                                 </div>
                                   <!-- 2 buttons -->
@@ -178,7 +178,7 @@
 
                                   <!-- 999 and sorbo jonin  -->
                                 <div class="mt-2 sm:mt-3">
-                                   <div class="text-xl sm:text-2xl md:text-3xl font-extrabold">1994-999999</div>
+                                   <div class="text-xl sm:text-2xl md:text-3xl font-bold">1994-999999</div>
                                    <span class="inline-block mt-2 bg-gray-200 text-gray-700 text-[10px] sm:text-xs md:text-sm px-2 sm:px-3 py-1 rounded-full">স্বাস্থ্য</span>
                                 </div>
                                   <!-- 2 buttons -->
@@ -203,7 +203,7 @@
 
                                   <!-- 999 and sorbo jonin  -->
                                 <div class="mt-2 sm:mt-3">
-                                   <div class="text-xl sm:text-2xl md:text-3xl font-extrabold">109</div>
+                                   <div class="text-xl sm:text-2xl md:text-3xl font-bold">109</div>
                                    <span class="inline-block mt-2 bg-gray-200 text-gray-700 text-[10px] sm:text-xs md:text-sm px-2 sm:px-3 py-1 rounded-full">সহায়তা</span>
                                 </div>
                                   <!-- 2 buttons -->
@@ -228,7 +228,7 @@
 
                                   <!-- 999 and sorbo jonin  -->
                                 <div class="mt-2 sm:mt-3">
-                                   <div class="text-xl sm:text-2xl md:text-3xl font-extrabold">106</div>
+                                   <div class="text-xl sm:text-2xl md:text-3xl font-bold">106</div>
                                    <span class="inline-block mt-2 bg-gray-200 text-gray-700 text-[10px] sm:text-xs md:text-sm px-2 sm:px-3 py-1 rounded-full">সরকারি</span>
                                 </div>
                                   <!-- 2 buttons -->
@@ -253,7 +253,7 @@
 
                                   <!-- 999 and sorbo jonin  -->
                                 <div class="mt-2 sm:mt-3">
-                                   <div class="text-xl sm:text-2xl md:text-3xl font-extrabold">16216</div>
+                                   <div class="text-xl sm:text-2xl md:text-3xl font-bold">16216</div>
                                    <span class="inline-block mt-2 bg-gray-200 text-gray-700 text-[10px] sm:text-xs md:text-sm px-2 sm:px-3 py-1 rounded-full">বিদ্যুৎ</span>
                                 </div>
                                   <!-- 2 buttons -->
@@ -278,7 +278,7 @@
 
                                   <!-- 999 and sorbo jonin  -->
                                 <div class="mt-2 sm:mt-3">
-                                   <div class="text-xl sm:text-2xl md:text-3xl font-extrabold">16445</div>
+                                   <div class="text-xl sm:text-2xl md:text-3xl font-bold">16445</div>
                                    <span class="inline-block mt-2 bg-gray-200 text-gray-700 text-[10px] sm:text-xs md:text-sm px-2 sm:px-3 py-1 rounded-full">এনজিও</span>
                                 </div>
                                   <!-- 2 buttons -->
@@ -304,7 +304,7 @@
 
                                   <!-- 999 and sorbo jonin  -->
                                 <div class="mt-2 sm:mt-3">
-                                   <div class="text-xl sm:text-2xl md:text-3xl font-extrabold">163</div>
+                                   <div class="text-xl sm:text-2xl md:text-3xl font-bold">163</div>
                                    <span class="inline-block mt-2 bg-gray-200 text-gray-700 text-[10px] sm:text-xs md:text-sm px-2 sm:px-3 py-1 rounded-full">পরিবহন</span>
                                 </div>
                                   <!-- 2 buttons -->
